--- a/shop.html
+++ b/shop.html
@@ -132,10 +132,10 @@
                         <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
                             <div class="overlay">
                                 <h2>ACCESSORIES</h2>
-                                <a class="info" href="#">SHOP NOW</a>
+                                <a class="info" href="Accessories.html">SHOP NOW</a>
                             </div>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
@@ -149,7 +149,7 @@
                         <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
                             <div class="overlay">
                                 <h2>JEWELERY</h2>
-                                <a class="info" href="#">SHOP NOW</a>
+                                <a class="info" href="jewelery.html">SHOP NOW</a>
                             </div>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                         <img class="img-responsive" src="img/portfolio/thumbnails/4.jpg" alt="">
                             <div class="overlay">
                                 <h2>GAMES</h2>
-                                <a class="info" href="#">SHOP NOW</a>
+                                <a class="info" href="Games.html">SHOP NOW</a>
                             </div>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                         <img class="img-responsive" src="img/portfolio/thumbnails/5.jpg" alt="">
                             <div class="overlay">
                                 <h2>ART</h2>
-                                <a class="info" href="#">SHOP NOW</a>
+                                <a class="info" href="Art.html">SHOP NOW</a>
                             </div>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
                         <img class="img-responsive" src="img/portfolio/thumbnails/6.jpg" alt="">
                             <div class="overlay">
                                 <h2>GADGETS</h2>
-                                <a class="info" href="#">SHOP NOW</a>
+                                <a class="info" href="Gadgets.html">SHOP NOW</a>
                             </div>
                     </div>
                 </div>
