--- a/Games.html
+++ b/Games.html
@@ -219,9 +219,9 @@
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
-                            <p class="text-center">$xxx by <a href="">owner</a></p>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
                         <div class="col-md-4 portfolio-item">
                             <a href="#">
