--- a/Games.html
+++ b/Games.html
@@ -215,7 +215,7 @@
                     <br><br><br><br>
                     <div class="row">
                         <div class="col-md-4 portfolio-item">
-                            <a href="#">
+                            <a href="item.html">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
@@ -228,18 +228,18 @@
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
                         <div class="col-md-4 portfolio-item">
-                            <a href="#">
+                            <a href="item.html">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
-                            <p class="text-center">$xxx by <a href="">owner</a></p>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
                     </div>
                     <br>
@@ -250,25 +250,25 @@
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
+                            </h4>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
+                        </div>
+                        <div class="col-md-4 portfolio-item">
+                            <a href="item.html">
+                                <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                            </a>
+                            <h4 class="text-center">
+                                <a href="item.html">Product Name</a>
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
                         <div class="col-md-4 portfolio-item">
-                            <a href="#">
+                            <a href="item.html">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
-                            </h4>
-                            <p class="text-center">$xxx by <a href="">owner</a></p>
-                        </div>
-                        <div class="col-md-4 portfolio-item">
-                            <a href="#">
-                                <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
-                            </a>
-                            <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
@@ -281,7 +281,7 @@
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html>Product Name</a>
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
@@ -290,7 +290,7 @@
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
@@ -299,7 +299,7 @@
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
