New changes made

--- a/item.html
+++ b/item.html
@@ -172,6 +172,10 @@
                 </ul>
             </div>
 
+            <button class="btn center-block btn-primary btn-block" style="background-color:red; border-color:red">
+                                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Buy Now
+                            </button>
+
         </div>
         <!-- /.row -->
 
