--- a/make.html
+++ b/make.html
@@ -274,7 +274,7 @@
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
                             <div class="overlay">
-                                <h2>JEWELERY</h2>
+                                <h2>JEWELLERY</h2>
                                 <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">SHOP NOW</a>
                             </div>
                     </div>
