--- a/shop.html
+++ b/shop.html
@@ -148,8 +148,8 @@
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
                             <div class="overlay">
-                                <h2>JEWELERY</h2>
-                                <a class="info" href="jewelery.html">SHOP NOW</a>
+                                <h2>JEWELLERY</h2>
+                                <a class="info" href="jewellery.html">SHOP NOW</a>
                             </div>
                     </div>
                 </div>
