--- a/Art.html
+++ b/Art.html
@@ -174,7 +174,7 @@
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
                             <div class="overlay">
-                                <h2>JEWELERY</h2>
+                                <h2>JEWELLERY</h2>
                                 <a class="info" href="#">SHOP NOW</a>
                             </div>
                     </div>
