New changes made

--- a/item.html
+++ b/item.html
@@ -170,12 +170,14 @@
                     <li>Consectetur</li>
                     <li>Adipiscing Elit</li>
                 </ul>
-            </div>
-
-            <button class="btn center-block btn-primary btn-block" style="background-color:red; border-color:red">
+<br>
+<br>
+<br>
+                <h2>$xx.xx</h2>
+                <button class="btn center-block btn-primary btn-block">
                                 <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Buy Now
                             </button>
-
+            </div>
         </div>
         <!-- /.row -->
 
