New changes made

--- a/Accessories.html
+++ b/Accessories.html
@@ -214,7 +214,7 @@
                     </div>
                     <br><br><br><br>
                     <div class="row">
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -223,7 +223,16 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                            </a>
+                            <h4 class="text-center">
+                                <a href="item.html">Product Name</a>
+                            </h4>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
+                        </div>
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -232,7 +241,7 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -245,7 +254,7 @@
                     <br>
 
                     <div class="row">
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -254,7 +263,7 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -263,7 +272,16 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                            </a>
+                            <h4 class="text-center">
+                                <a href="item.html">Product Name</a>
+                            </h4>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
+                        </div>
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -276,7 +294,7 @@
 
                     <br>
                     <div class="row">
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -285,7 +303,16 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                            </a>
+                            <h4 class="text-center">
+                                <a href="item.html">Product Name</a>
+                            </h4>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
+                        </div>
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -294,7 +321,7 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -304,7 +331,7 @@
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
                     </div>
-                    <div class="class="col-md-4 portfolio-item"">
+                    <div class="col-md-4 portfolio-item">
                         <a href="#" class="btn btn-dark">View More Items</a>
                     </div>
                 </div>
@@ -314,10 +341,10 @@
     <div class="intro-header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 banner">
+                <div class="col-lg-6">
                     <a href="" style="color:white"><h2>Hire A Designer</h2></a>
                 </div>
-                <div class="col-lg-6 banner">
+                <div class="col-lg-6">
                     <a href="" style="color:white"><h2>Share Your Story</h2></a>
                 </div>
             </div>
