--- a/shop.html
+++ b/shop.html
@@ -115,27 +115,26 @@
                 </h1>
             </div>
         </div>
-            <section class="no-padding" id="portfolio">
+    <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-6 col-md-8 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                            <div class="overlay">
-                                <h2>CUSTOMIZABLE</h2>
-                                <a class="info" href="#">SHOP NOW</a>
-                            </div>
+                        <div class="overlay">
+                            <h2>Wedding</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>       
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
-                            <div class="overlay">
-                                <h2>ACCESSORIES</h2>
-                                <a class="info" href="Accessories.html">SHOP NOW</a>
-                            </div>
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Customizable</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
-
                 </div>
             </div>
         </div>
@@ -144,46 +143,62 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
-                            <div class="overlay">
-                                <h2>JEWELLERY</h2>
-                                <a class="info" href="jewellery.html">SHOP NOW</a>
-                            </div>
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Jewellery</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/4.jpg" alt="">
-                            <div class="overlay">
-                                <h2>GAMES</h2>
-                                <a class="info" href="Games.html">SHOP NOW</a>
-                            </div>
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Accessories</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/5.jpg" alt="">
-                            <div class="overlay">
-                                <h2>ART</h2>
-                                <a class="info" href="Art.html">SHOP NOW</a>
-                            </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/6.jpg" alt="">
-                            <div class="overlay">
-                                <h2>GADGETS</h2>
-                                <a class="info" href="Gadgets.html">SHOP NOW</a>
-                            </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Games</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Art</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Miniatures</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
         <br><br><br>
 
         <div class="row">
@@ -194,7 +209,7 @@
         </div>
         <br><br><br>
         <div class="row">
-            <div class="col-md-4 portfolio-item">
+            <div class="col-md-3 portfolio-item">
                 <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
@@ -203,7 +218,7 @@
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
-            <div class="col-md-4 portfolio-item">
+            <div class="col-md-3 portfolio-item">
                 <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
@@ -212,7 +227,16 @@
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
-            <div class="col-md-4 portfolio-item">
+            <div class="col-md-3 portfolio-item">
+                <a href="item.html">
+                    <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                </a>
+                <h4 class="text-center">
+                    <a href="item.html">Product Name</a>
+                </h4>
+                <p class="text-center">$xxx by owner</p>
+            </div>
+            <div class="col-md-3 portfolio-item">
                 <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
@@ -226,7 +250,7 @@
 <br>
         <!-- Projects Row -->
         <div class="row">
-            <div class="col-md-4 portfolio-item">
+            <div class="col-md-3 portfolio-item">
                 <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
@@ -235,7 +259,7 @@
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
-            <div class="col-md-4 portfolio-item">
+            <div class="col-md-3 portfolio-item">
                 <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
@@ -244,7 +268,16 @@
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
-            <div class="col-md-4 portfolio-item">
+            <div class="col-md-3 portfolio-item">
+                <a href="item.html">
+                    <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                </a>
+                <h4 class="text-center">
+                    <a href="item.html">Product Name</a>
+                </h4>
+                <p class="text-center">$xxx by owner</p>
+            </div>
+            <div class="col-md-3 portfolio-item">
                 <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
@@ -257,7 +290,7 @@
     <br>
         <!-- Projects Row -->
         <div class="row">
-            <div class="col-md-4 portfolio-item">
+            <div class="col-md-3 portfolio-item">
                 <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
@@ -266,7 +299,7 @@
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
-            <div class="col-md-4 portfolio-item">
+            <div class="col-md-3 portfolio-item">
                 <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
@@ -275,7 +308,16 @@
                 </h4>
                 <p class="text-center">$xxx by owner</p>
             </div>
-            <div class="col-md-4 portfolio-item">
+            <div class="col-md-3 portfolio-item">
+                <a href="item.html">
+                    <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                </a>
+                <h4 class="text-center">
+                    <a href="item.html">Product Name</a>
+                </h4>
+                <p class="text-center">$xxx by owner</p>
+            </div>
+            <div class="col-md-3 portfolio-item">
                 <a href="item.html">
                     <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                 </a>
@@ -292,10 +334,10 @@
     <div class="intro-header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 banner">
+                <div class="col-lg-6">
                     <a href="" style="color:white"><h2>Hire A Designer</h2></a>
                 </div>
-                <div class="col-lg-6 banner">
+                <div class="col-lg-6">
                     <a href="" style="color:white"><h2>Share Your Story</h2></a>
                 </div>
             </div>
