--- a/Art.html
+++ b/Art.html
@@ -214,69 +214,87 @@
                     </div>
                     <br><br><br><br>
                     <div class="row">
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
-                            <p class="text-center">$xxx by <a href="">owner</a></p>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
-                            <p class="text-center">$xxx by <a href="">owner</a></p>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
-                            <p class="text-center">$xxx by <a href="">owner</a></p>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
+                        </div>
+                        <div class="col-md-3 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                            </a>
+                            <h4 class="text-center">
+                                <a href="item.html">Product Name</a>
+                            </h4>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
                     </div>
                     <br>
 
                     <div class="row">
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
-                            <p class="text-center">$xxx by <a href="">owner</a></p>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
-                            <p class="text-center">$xxx by <a href="">owner</a></p>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
-                            <p class="text-center">$xxx by <a href="">owner</a></p>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
+                        </div>
+                        <div class="col-md-3 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                            </a>
+                            <h4 class="text-center">
+                                <a href="item.html">Product Name</a>
+                            </h4>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
                     </div>
 
                     <br>
                     <div class="row">
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -285,26 +303,35 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
-                            <p class="text-center">$xxx by <a href="">owner</a></p>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
                             <h4 class="text-center">
-                                <a href="#">Product Name</a>
+                                <a href="item.html">Product Name</a>
                             </h4>
-                            <p class="text-center">$xxx by <a href="">owner</a></p>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
+                        </div>
+                        <div class="col-md-3 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                            </a>
+                            <h4 class="text-center">
+                                <a href="item.html">Product Name</a>
+                            </h4>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
                     </div>
-                    <div class="class="col-md-4 portfolio-item"">
+                    <div class="col-md-4 portfolio-item">
                         <a href="#" class="btn btn-dark">View More Items</a>
                     </div>
                 </div>
@@ -314,10 +341,10 @@
     <div class="intro-header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 banner">
+                <div class="col-lg-6">
                     <a href="" style="color:white"><h2>Hire A Designer</h2></a>
                 </div>
-                <div class="col-lg-6 banner">
+                <div class="col-lg-6">
                     <a href="" style="color:white"><h2>Share Your Story</h2></a>
                 </div>
             </div>
