--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         	<a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
                     	</li>
                     	<li>
-                        	<a href="#">Join</a>
+                        	<a href="#" data-toggle="modal" data-target="#myModal1">Join</a>
                     	</li>
                     	<li>
                         	<a href="#" data-toggle="modal" data-target="#myModal">Sign In</a>
@@ -108,7 +108,7 @@
         	</div>
         	<!-- /.container -->
     	</nav>
-
+        <!--Login-->
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -144,7 +144,52 @@
                 </div>
             </div>
         </div>
-
+        <!--Login-->
+        <!--Register-->
+        <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">REGISTER HERE</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Name</label>
+                                <input type="name" class="form-control" id="exampleInputName1" placeholder="Name">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Confirm Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <button type="submit" class="btn center-block btn-primary btn-lg btn-block">Register</button>
+                        </form>
+                        <div class="col-lg-12">
+                            <h2 class="intro-text text-center signup1"><strong>OR</strong></h2>
+                            <button class="btn center-block btn-primary btn-block btn-social btn-facebook">
+                                <span class="fa fa-facebook">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Log in with  Facebook
+                            </button>
+                            <button class="btn center-block btn-primary btn-block btn-social btn-google" style="background-color:red; border-color:red">
+                                <span class="fa fa-google-plus">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Log in with Google+
+                            </button><br>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Register-->
 		<!-- Header -->
     <a name="about"></a>
     <div class="intro-header">
@@ -214,22 +259,18 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-6 col-md-8 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                            <div class="overlay">
-                                <h2>CUSTOMIZABLE</h2>
-                                <a class="info" href="#">SHOP NOW</a>
-                            </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/moz.png" alt="">   
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
-                            <div class="overlay">
-                                <h2>ACCESSORIES</h2>
-                                <a class="info" href="#">SHOP NOW</a>
-                            </div>
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Customizable</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
             </div>
@@ -239,40 +280,57 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
-                            <div class="overlay">
-                                <h2>JEWELLERY</h2>
-                                <a class="info" href="#">SHOP NOW</a>
-                            </div>
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Jewellery</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/4.jpg" alt="">
-                            <div class="overlay">
-                                <h2>GAMES</h2>
-                                <a class="info" href="#">SHOP NOW</a>
-                            </div>
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Accessories</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/5.jpg" alt="">
-                            <div class="overlay">
-                                <h2>ART</h2>
-                                <a class="info" href="#">SHOP NOW</a>
-                            </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Games</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/6.jpg" alt="">
-                            <div class="overlay">
-                                <h2>GADGETS</h2>
-                                <a class="info" href="#">SHOP NOW</a>
-                            </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Art</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Miniatures</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
             </div>
