--- a/jewellery.html
+++ b/jewellery.html
@@ -145,22 +145,22 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-6 col-md-8 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                            <div class="overlay">
-                                <h2>CUSTOMIZABLE</h2>
-                                <a class="info" href="#">SHOP NOW</a>
-                            </div>
+                        <div class="overlay">
+                            <h2>Wedding</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>       
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
-                            <div class="overlay">
-                                <h2>ACCESSORIES</h2>
-                                <a class="info" href="#">SHOP NOW</a>
-                            </div>
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Customizable</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
             </div>
@@ -170,40 +170,57 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
-                            <div class="overlay">
-                                <h2>JEWELLERY</h2>
-                                <a class="info" href="#">SHOP NOW</a>
-                            </div>
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Jewellery</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/4.jpg" alt="">
-                            <div class="overlay">
-                                <h2>GAMES</h2>
-                                <a class="info" href="#">SHOP NOW</a>
-                            </div>
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Accessories</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/5.jpg" alt="">
-                            <div class="overlay">
-                                <h2>ART</h2>
-                                <a class="info" href="#">SHOP NOW</a>
-                            </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Games</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-                    <div class="hovereffect">
-                        <img class="img-responsive" src="img/portfolio/thumbnails/6.jpg" alt="">
-                            <div class="overlay">
-                                <h2>GADGETS</h2>
-                                <a class="info" href="#">SHOP NOW</a>
-                            </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Art</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Miniatures</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
             </div>
@@ -214,7 +231,7 @@
                     </div>
                     <br><br><br><br>
                     <div class="row">
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -223,7 +240,7 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -232,7 +249,16 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                            </a>
+                            <h4 class="text-center">
+                                <a href="item.html">Product Name</a>
+                            </h4>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
+                        </div>
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -245,7 +271,7 @@
                     <br>
 
                     <div class="row">
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -254,7 +280,7 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -263,7 +289,16 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                            </a>
+                            <h4 class="text-center">
+                                <a href="item.html">Product Name</a>
+                            </h4>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
+                        </div>
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -276,7 +311,7 @@
 
                     <br>
                     <div class="row">
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -285,7 +320,7 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -294,7 +329,16 @@
                             </h4>
                             <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
-                        <div class="col-md-4 portfolio-item">
+                        <div class="col-md-3 portfolio-item">
+                            <a href="#">
+                                <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
+                            </a>
+                            <h4 class="text-center">
+                                <a href="item.html">Product Name</a>
+                            </h4>
+                            <p class="text-center">$xxx by <a href="item.html">owner</a></p>
+                        </div>
+                        <div class="col-md-3 portfolio-item">
                             <a href="#">
                                 <img class="img-responsive" src="http://launchclinic.com/files/2015/09/Week-3-700-x-400.png" alt="">
                             </a>
@@ -304,7 +348,7 @@
                             <p class="text-center">$xxx by <a href="item.html">owner</a></p>
                         </div>
                     </div>
-                    <div class="class="col-md-4 portfolio-item"">
+                    <div class="col-md-4 portfolio-item">
                         <a href="#" class="btn btn-dark">View More Items</a>
                     </div>
                 </div>
@@ -314,10 +358,10 @@
     <div class="intro-header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 banner">
+                <div class="col-lg-6">
                     <a href="" style="color:white"><h2>Hire A Designer</h2></a>
                 </div>
-                <div class="col-lg-6 banner">
+                <div class="col-lg-6">
                     <a href="" style="color:white"><h2>Share Your Story</h2></a>
                 </div>
             </div>
