Added the price bar,changed hire a designer tab, modified make.html

--- a/make.html
+++ b/make.html
@@ -108,7 +108,7 @@
         	</div>
         	<!-- /.container -->
     	</nav>
-
+<br><br><br>
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -146,31 +146,82 @@
         </div>
 
         <!-- Header -->
-    <a name="about"></a>
-    <div class="intro-header">
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="intro-message">
-                        <h1>Aakist</h1>
-                        <h3>Think &nbsp;&nbsp;&nbsp;&nbsp;Create&nbsp;&nbsp;&nbsp;&nbsp;Print&nbsp;&nbsp;&nbsp;&nbsp;Sell</h3>
-                        <hr class="intro-divider">
-                        <ul class="list-inline">
-                            <li>
-                                <a href="shop.html" class="btn button btn-default btn-lg"><span class="network-name" style="color:white;">UPLOAD YOU MODEL</span></a>
-                            </li>
-                        </ul>
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Wedding</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>       
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Customizable</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
                     </div>
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
+    </section>
 
-    </div>
-    <!-- /.intro-header -->
-    <br>
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Jewellery</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Accessories</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                        <div class="overlay">
+                            <h2>Games</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                        </div>         
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="no-padding" id="portfolio">
+        <div class="container-fluid">
+            <div class="row no-gutter popup-gallery">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="hover ehover5">
+                        <img class="img-responsive" src="Img/portfolio/thumbnails/7.jpg" alt="">
+                        <div class="overlay">
+                            <h2>YOUR MODEL</h2>
+                            <button class="info" data-toggle="modal" data-target="#modal1" style="font-size:28px;">UPLOAD YOUR MODEL</button>
+                        </div>         
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+        <br><br><br>
 
     <section id="services" class="services">
         <div class="container">
@@ -231,24 +282,50 @@
         <!-- /.container -->
     </section>
 <br>
+
+<div class="col-lg-12">
+        <h2 class="intro-text text-center">
+            <strong>A FEW FEATURED PRODUCTS</strong>
+        </h2>
+        <br>
+        <p class="text-center">Here are a few featured products from some designers</p>
+    </div>
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery ">
-                <div class="col-lg-6 col-md-8 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
                             <div class="overlay">
-                                <h2>CUSTOMIZABLE</h2>
-                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">SHOP NOW</a>
+                                <h2>PRODUCT NAME</h2>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">VIEW MORE DETAILS</a>
                             </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
                             <div class="overlay">
-                                <h2>ACCESSORIES</h2>
-                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">SHOP NOW</a>
+                                <h2>PRODUCT NAME</h2>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">VIEW MORE DETAILS</a>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
+                            <div class="overlay">
+                                <h2>PRODUCT NAME</h2>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">VIEW MORE DETAILS</a>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+                    <div class="hovereffect">
+                        <img class="img-responsive" src="img/portfolio/thumbnails/2.jpg" alt="">
+                            <div class="overlay">
+                                <h2>PRODUCT NAME</h2>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">VIEW MORE DETAILS</a>
                             </div>
                     </div>
                 </div>
@@ -274,8 +351,8 @@
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/3.jpg" alt="">
                             <div class="overlay">
-                                <h2>JEWELLERY</h2>
-                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">SHOP NOW</a>
+                                <h2>PRODUCT NAME</h2>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">VIEW MORE DETAILS</a>
                             </div>
                     </div>
                 </div>
@@ -283,8 +360,8 @@
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/4.jpg" alt="">
                             <div class="overlay">
-                                <h2>GAMES</h2>
-                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">SHOP NOW</a>
+                                <h2>PRODUCT NAME</h2>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">VIEW MORE DETAILS</a>
                             </div>
                     </div>
                 </div>
@@ -292,8 +369,8 @@
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/5.jpg" alt="">
                             <div class="overlay">
-                                <h2>ART</h2>
-                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">SHOP NOW</a>
+                                <h2>PRODUCT NAME</h2>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">VIEW MORE DETAILS</a>
                             </div>
                     </div>
                 </div>
@@ -301,8 +378,8 @@
                     <div class="hovereffect">
                         <img class="img-responsive" src="img/portfolio/thumbnails/6.jpg" alt="">
                             <div class="overlay">
-                                <h2>GADGETS</h2>
-                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">SHOP NOW</a>
+                                <h2>PRODUCT NAME</h2>
+                                <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">VIEW MORE DETAILS</a>
                             </div>
                     </div>
                 </div>
@@ -321,14 +398,14 @@
         </div>
     </div>
 <br><br>
-    <div class="intro-header">
+<div class="intro-header">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 banner">
-                    <a href="" style="color:white"><h2>Hire A Designer</h2></a>
+                <div class="col-lg-6">
+                    <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
                 </div>
-                <div class="col-lg-6 banner">
-                    <a href="" style="color:white"><h2>Share Your Story</h2></a>
+                <div class="col-lg-6">
+                    <a href="" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
                 </div>
             </div>
         </div>
