--- a/shop.html
+++ b/shop.html
@@ -335,10 +335,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <a href="" style="color:white"><h2>Hire A Designer</h2></a>
+                    <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
                 </div>
                 <div class="col-lg-6">
-                    <a href="" style="color:white"><h2>Share Your Story</h2></a>
+                    <a href="" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
                 </div>
             </div>
         </div>
