--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
                         <div class="overlay">
                             <h2>Customizable</h2>
-                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                            <button class="info"><a href="jewellery.html">Shop Now</a></button>
                         </div>         
                     </div>
                 </div>
@@ -285,7 +285,7 @@
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
                         <div class="overlay">
                             <h2>Jewellery</h2>
-                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                            <button class="info"><a href="jewellery.html">Shop Now</a></button>
                         </div>         
                     </div>
                 </div>
@@ -294,7 +294,7 @@
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
                         <div class="overlay">
                             <h2>Accessories</h2>
-                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                            <button class="info"><a href="Accessories.html">Shop Now</a></button>
                         </div>         
                     </div>
                 </div>
@@ -304,7 +304,7 @@
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
                         <div class="overlay">
                             <h2>Games</h2>
-                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                            <button class="info"><a href="Games.html">Shop Now</a></button>
                         </div>         
                     </div>
                 </div>
@@ -320,7 +320,7 @@
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
                         <div class="overlay">
                             <h2>Art</h2>
-                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                            <button class="info"><a href="Art.html">Shop Now</a></button>
                         </div>         
                     </div>
                 </div>
@@ -329,7 +329,7 @@
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
                         <div class="overlay">
                             <h2>Miniatures</h2>
-                            <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                            <button class="info"><a href="Miniatures.html">Shop Now</a></button>
                         </div>         
                     </div>
                 </div>
