--- a/jewellery.html
+++ b/jewellery.html
@@ -28,86 +28,168 @@
 
 	<body>
 		<!-- Navigation -->
-    	<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-        	<div class="container topnav">
-            	<!-- Brand and toggle get grouped for better mobile display -->
-            	<div class="navbar-header">
-                	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    	<span class="sr-only">Toggle navigation</span>
-                    	<span class="icon-bar"></span>
-                    	<span class="icon-bar"></span>
-                    	<span class="icon-bar"></span>
-                	</button>
-                	<a class="navbar-brand topnav" href="#">AAKIST</a>
-            	</div>
-            	<!-- Collect the nav links, forms, and other content for toggling -->
-            	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            		<ul class="nav navbar-nav navbar-left dropdown">
-            			<li>
-            				<a href="#" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            					Shop 
-            					<span class="caret"></span>
-            					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    								<li><a href="#">Action</a></li>
-    								<li><a href="#">Another action</a></li>
-    								<li><a href="#">Something else here</a></li>
-    								<li role="separator" class="divider"></li>
-    								<li><a href="#">Separated link</a></li>
-  								</ul>
-            				</a>
-            			</li>
-            			<li>
-            				<a href="#" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            					Make
-            					<span class="caret"></span>
-            					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    								<li><a href="#">Action</a></li>
-    								<li><a href="#">Another action</a></li>
-    								<li><a href="#">Something else here</a></li>
-    								<li role="separator" class="divider"></li>
-    								<li><a href="#">Separated link</a></li>
-  								</ul>
-            				</a>
-            			</li>
-            			<li>
-            				<a href="#" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            					Community
-            					<span class="caret"></span>
-            					<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-    								<li><a href="#">Action</a></li>
-    								<li><a href="#">Another action</a></li>
-    								<li><a href="#">Something else here</a></li>
-    								<li role="separator" class="divider"></li>
-    								<li><a href="#">Separated link</a></li>
-  								</ul>
-            				</a>
-            			</li>
-            		</ul>
-                	<ul class="nav navbar-nav navbar-right">
-                		<li>
-                			<form class="navbar-form navbar-right" role="search">
-        						<div class="form-group has-feedback has-feedback-right">
-          							<input type="text" class="form-control" placeholder="Search">
-          							<a href="#"><i class="form-control-feedback glyphicon glyphicon-search" aria-hidden="true"></i></a>
-        						</div>
-        						<button class="btn btn-default">UPLOAD</button>
-      						</form>
-                		</li>
-                    	<li>
-                        	<a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
-                    	</li>
-                    	<li>
-                        	<a href="#">Join</a>
-                    	</li>
-                    	<li>
-                        	<a href="#">Sign In</a>
-                    	</li>
-                	</ul>
-            	</div>
-            	<!-- /.navbar-collapse -->
-        	</div>
-        	<!-- /.container -->
-    	</nav>
+        <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+            <div class="container topnav">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand topnav" href="index.html">AAKIST</a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-left dropdown">
+                        <li>
+                            <a href="#" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                Shop 
+                                <span class="caret"></span>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                Make
+                                <span class="caret"></span>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                Community
+                                <span class="caret"></span>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <form class="navbar-form navbar-right" role="search">
+                                <div class="form-group has-feedback has-feedback-right">
+                                    <input type="text" class="form-control" placeholder="Search">
+                                    <a href="#"><i class="form-control-feedback glyphicon glyphicon-search" aria-hidden="true"></i></a>
+                                </div>
+                                <button class="btn btn-default">UPLOAD</button>
+                            </form>
+                        </li>
+                        <li>
+                            <a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
+                        </li>
+                        <li>
+                            <a href="#" data-toggle="modal" data-target="#myModal1">Join</a>
+                        </li>
+                        <li>
+                            <a href="#" data-toggle="modal" data-target="#myModal">Sign In</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container -->
+        </nav>
+        <!--Login-->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">LOGIN HERE</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <button type="submit" class="btn center-block btn-primary btn-lg btn-block">Login</button>
+                        </form>
+                        <div class="col-lg-12">
+                            <h2 class="intro-text text-center signup1"><strong>OR</strong></h2>
+                            <button class="btn center-block btn-primary btn-block btn-social btn-facebook">
+                                <span class="fa fa-facebook">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Log in with  Facebook
+                            </button>
+                            <button class="btn center-block btn-primary btn-block btn-social btn-google" style="background-color:red; border-color:red">
+                                <span class="fa fa-google-plus">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Log in with Google+
+                            </button><br>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Login-->
+        <!--Register-->
+        <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">REGISTER HERE</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Name</label>
+                                <input type="name" class="form-control" id="exampleInputName1" placeholder="Name">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Confirm Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <button type="submit" class="btn center-block btn-primary btn-lg btn-block">Register</button>
+                        </form>
+                        <div class="col-lg-12">
+                            <h2 class="intro-text text-center signup1"><strong>OR</strong></h2>
+                            <button class="btn center-block btn-primary btn-block btn-social btn-facebook">
+                                <span class="fa fa-facebook">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Log in with  Facebook
+                            </button>
+                            <button class="btn center-block btn-primary btn-block btn-social btn-google" style="background-color:red; border-color:red">
+                                <span class="fa fa-google-plus">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Log in with Google+
+                            </button><br>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Register-->
         <br><br><br><br><br>
 
         <div class="container">
@@ -122,6 +204,14 @@
                         <a href="#" class="list-group-item item">Category 2</a>
                         <a href="#" class="list-group-item item">Category 3</a>
                     </div>
+                    <form class="form-horizontal form-pricing" role="form">
+                        <div class="price-slider">
+                            <h4 class="great">Price Range</h4>
+                                <div class="col-sm-12">
+                                    <div id="slider"></div>
+                                </div>
+                        </div>
+                    </form>
                     <p class="lead">Materials</p>
                     <div class="list-group">
                         <a href="#" class="list-group-item item">Category 1</a>
@@ -351,6 +441,8 @@
                     <div class="col-md-4 portfolio-item">
                         <a href="#" class="btn btn-dark">View More Items</a>
                     </div>
+
+    <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
                 </div>
             </div>
         </div>
@@ -359,10 +451,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <a href="" style="color:white"><h2>Hire A Designer</h2></a>
+                    <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
                 </div>
                 <div class="col-lg-6">
-                    <a href="" style="color:white"><h2>Share Your Story</h2></a>
+                    <a href="" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
                 </div>
             </div>
         </div>
@@ -402,6 +494,42 @@
         $(document).ready(function () {
         $('.dropdown-toggle').dropdown();
         });
+    </script>
+    <script type="text/javascript">
+        $('#myModal').on('shown.bs.modal', function () {
+            $('#myInput').focus()
+        })
+    </script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+          $("#slider").slider({
+              animate: true,
+              value:1,
+              min: 0,
+              max: 10000,
+              step: 20,
+              slide: function(event, ui) {
+                  update(1,ui.value); //changed
+              }
+          });
+
+
+          //Added, set initial value.
+          $("#amount").val(0);
+          $("#duration").val(0);
+          $("#amount-label").text(0);
+          $("#duration-label").text(0);
+          
+          update();
+      });
+
+      //changed. now with parameter
+      function update(slider,val) {
+        //changed. Now, directly take value from ui.value. if not set (initial, will use current value.)
+        var $amount = slider == 1?val:$("#amount").val();
+        var $duration = slider == 2?val:$("#duration").val();
+         $('#slider a').html('<label><span class="glyphicon glyphicon-chevron-left"></span> '+$amount+' <span class="glyphicon glyphicon-chevron-right"></span></label>');
+      }
     </script>
     </body>
 </html>
