Added the price bar,changed hire a designer tab, modified make.html

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
                         <div class="overlay">
                             <h2>Jewellery</h2>
-                            <button class="info"><a href="jewellery.html">Shop Now</a></button>
+                            <button class="info"><a href="jewellery.html" style="text-decoration:none">Shop Now</a></button>
                         </div>         
                     </div>
                 </div>
