--- a/item.html
+++ b/item.html
@@ -38,7 +38,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand topnav" href="#">AAKIST</a>
+                    <a class="navbar-brand topnav" href="index.html">AAKIST</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -97,17 +97,100 @@
                             <a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
                         </li>
                         <li>
-                            <a href="#">Join</a>
+                            <a href="#" data-toggle="modal" data-target="#myModal1">Join</a>
                         </li>
                         <li>
-                            <a href="#">Sign In</a>
+                            <a href="#" data-toggle="modal" data-target="#myModal">Sign In</a>
                         </li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
             </div>
             <!-- /.container -->
-        </nav><br><br>
+        </nav>
+        <!--Login-->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">LOGIN HERE</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <button type="submit" class="btn center-block btn-primary btn-lg btn-block">Login</button>
+                        </form>
+                        <div class="col-lg-12">
+                            <h2 class="intro-text text-center signup1"><strong>OR</strong></h2>
+                            <button class="btn center-block btn-primary btn-block btn-social btn-facebook">
+                                <span class="fa fa-facebook">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Log in with  Facebook
+                            </button>
+                            <button class="btn center-block btn-primary btn-block btn-social btn-google" style="background-color:red; border-color:red">
+                                <span class="fa fa-google-plus">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Log in with Google+
+                            </button><br>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Login-->
+        <!--Register-->
+        <div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">REGISTER HERE</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Name</label>
+                                <input type="name" class="form-control" id="exampleInputName1" placeholder="Name">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Confirm Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <button type="submit" class="btn center-block btn-primary btn-lg btn-block">Register</button>
+                        </form>
+                        <div class="col-lg-12">
+                            <h2 class="intro-text text-center signup1"><strong>OR</strong></h2>
+                            <button class="btn center-block btn-primary btn-block btn-social btn-facebook">
+                                <span class="fa fa-facebook">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Log in with  Facebook
+                            </button>
+                            <button class="btn center-block btn-primary btn-block btn-social btn-google" style="background-color:red; border-color:red">
+                                <span class="fa fa-google-plus">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Log in with Google+
+                            </button><br>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Register-->
+        <br><br>
 
     <!-- Page Content -->
     <div class="container">
