--- a/make.html
+++ b/make.html
@@ -391,7 +391,7 @@
             </div>
         </div>
         <br><br>
-        <div class="intro-header">
+        <div class="intro-header1">
             <div class="col-lg-6 img">
                 <br><br><br><br>
                 <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
@@ -403,7 +403,7 @@
                 <br><br><br><br>
             </div>
             <div class="clearfix"></div>
-            <!-- /.container -->
+        <!-- /.container -->
         </div>
         <!-- /.banner -->
 
