--- a/shop.html
+++ b/shop.html
@@ -412,7 +412,7 @@
         </div>
 
         <br><br>
-        <div class="intro-header">
+        <div class="intro-header1">
             <div class="col-lg-6 img">
                 <br><br><br><br>
                 <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
@@ -424,10 +424,9 @@
                 <br><br><br><br>
             </div>
             <div class="clearfix"></div>
-            <!-- /.container -->
+        <!-- /.container -->
         </div>
         <!-- /.banner -->
-
         <footer>
             <div class="container">
                 <div class="row">
