--- a/Gadgets.html
+++ b/Gadgets.html
@@ -439,7 +439,7 @@
             </div>
         </div>
         <br><br>
-        <div class="intro-header">
+        <div class="intro-header1">
             <div class="col-lg-6 img">
                 <br><br><br><br>
                 <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
